fix claim alignment

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ html, body {
   overflow-y: auto;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 #root {
   width: 100%;
   min-height: 100%;
